--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt">
 <head>
-  <meta charset="UTF-8">
-  <title>Gestão de Alunos</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gestão de Alunos</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Alunos</h1>
-  <ul id="lista-alunos"></ul>
-  <script src="script.js"></script>
+    <h1>Gestão de Alunos</h1>
+    
+    <div class="container">
+        <!-- Formulário -->
+        <form id="alunoForm">
+            <input type="hidden" id="alunoId">
+            <input type="text" id="nome" placeholder="Nome" required>
+            <input type="text" id="apelido" placeholder="Apelido" required>
+            <select id="curso" required>
+                <option value="">Selecione um curso</option>
+            </select>
+            <select id="anoCurricular" required>
+                <option value="1">1º Ano</option>
+                <option value="2">2º Ano</option>
+                <option value="3">3º Ano</option>
+            </select>
+            <button type="submit">Salvar</button>
+            <button type="button" id="cancelBtn">Cancelar</button>
+        </form>
+
+        <!-- Tabela -->
+        <table id="alunosTable">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Apelido</th>
+                    <th>Curso</th>
+                    <th>Ano</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
+    <script src="app.js"></script>
 </body>
 </html>
